feat(deployment): Added custom built JRE docker file for spring image 483MB -> 128MB. <br> - Added compose and stack deployment for MySQL.